crates/uselesskey-rsa/tests/snapshots/snapshots_rsa__jwk_snapshots__rs384-metadata.snap
---
source: crates/uselesskey-rsa/tests/snapshots_rsa.rs
expression: "serde_json::json!({ \"kid\": kid, \"alg\": alg, \"kty\": kty, \"use\": use_, })"
---
alg: RS384
kid: IQpgyE6LJ-yyCNAg
kty: RSA
use: sig
