crates/uselesskey-rsa/tests/snapshots/snapshots_rsa__jwk_snapshots__rsa_2048_public_jwk.snap
---
source: crates/uselesskey-rsa/tests/snapshots_rsa.rs
expression: shape
---
kty: RSA
alg: RS256
use_: sig
kid: "[REDACTED]"
n: "[REDACTED]"
e: "[REDACTED]"
