crates/uselesskey-rsa/tests/snapshots/snapshots_rsa__jwk_snapshots__snapshot_rs256_public_jwk_structure.snap
---
source: crates/uselesskey-rsa/tests/snapshots_rsa.rs
expression: jwk
---
alg: RS256
e: "[REDACTED]"
kid: ptKUQ96fHKy1sBMD
kty: RSA
n: "[REDACTED]"
use: sig
