crates/uselesskey-rsa/tests/snapshots/snapshots_rsa__jwk_snapshots__snapshot_rs384_public_jwk_structure.snap
---
source: crates/uselesskey-rsa/tests/snapshots_rsa.rs
expression: jwk
---
alg: RS384
e: "[REDACTED]"
kid: IQpgyE6LJ-yyCNAg
kty: RSA
n: "[REDACTED]"
use: sig
