crates/uselesskey-rsa/tests/snapshots/snapshots_rsa__jwk_snapshots__snapshot_rs512_public_jwk_structure.snap
---
source: crates/uselesskey-rsa/tests/snapshots_rsa.rs
expression: jwk
---
alg: RS512
e: "[REDACTED]"
kid: LNVt9kljp7G9SmfL
kty: RSA
n: "[REDACTED]"
use: sig
